Fix home page logo alignment

--- a/source/assets/stylesheets/_components.branding.scss
+++ b/source/assets/stylesheets/_components.branding.scss
@@ -53,6 +53,8 @@
   font-weight: $bold;
   color: $color-text-strong;
 
+  position: static;
+
   &::before
   &::after {
     display: none;
